Fix close button vertical alignment

--- a/umap/static/umap/base.css
+++ b/umap/static/umap/base.css
@@ -761,7 +761,7 @@ i.info {
 .umap-close-icon {
     background-repeat: no-repeat;
     background-image: url('./img/16.png');
-    background-position: -52px -9px;
+    background-position: -52px -13px;
     display: inline;
     padding: 0 10px;
     vertical-align: middle;
